--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,11 @@ body {
     display: none !important;
 }
 
+#winner {
+    font-size: 20px;
+    font-weight: bold;
+}
+
 .end-screen {
     width: 200px;
     height: 200px;
